namespace SFunctionHybrid.Framework.SampleTimes
{
    public class ConstantSampleTime : SampleTime
    {

    }
}
