namespace SFunctionHybrid.Framework.SampleTimes
{
    public class ContinuousSampleTime : SampleTime
    {

    }
}
