namespace SFunctionHybrid.Framework.SampleTimes
{
    public class InheritedSampleTime : SampleTime
    {

    }
}
